# gitghost

./: .gitignore  LICENSE  README.md  example-dossier.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
demo/: make_demo_repo.sh
gitghost/: banner.py  cli.py  ghost.py  github.py  metadata.py  report.py  rules.py  scanner.py  score.py
tests/: test_detection.py
